--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,19 @@
     border-style: solid;
     border-width: 1px;
 }
+
+h4 {
+    display:inline;
+}
+
+#loginAdmin a{
+    color: white;
+}
+
+#logoImage{
+    height: 150px
+}
+
+#main{
+    padding-top: 15px;
+}
