--- a/templates/BasePage.html
+++ b/templates/BasePage.html
@@ -22,18 +22,41 @@
 
 <body>
 
-<div class="container">
+<div class="container" id="main">
     <div class="row">
-        {% block startPageBlock %}{% endblock %}
-    </div>
+        <div class="col-lg-2" >
+            <img id="logoImage" src="{% static 'Logo.jpg' %}" alt="Logo.jpg">
+        </div>
+        <div class="col-lg-10">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Forums board</h4>
+                    <span class="pull-right" id="loginAdmin">
+                        {% if user.is_anonymous %}
+                            <a href="{% url 'user_login' %}">Login</a>
+                        {% else %}
+                            Logged in as {{ user }} (<a href="{% url 'user_logout' %}">logout</a>)
+                            |  <a href="{% url 'admin:index' %}">Admin</a>
+                        {% endif %}
 
+                    </span>
+
+                </div>
+                <div class="panel-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Proin augue augue, congue quis dui ut, ornare varius quam.
+                    Etiam molestie elementum velit vel facilisis. Phasellus posuere mauris eget velit interdum elementum. Maecenas porta, velit sit amet efficitur blandit, ligula sapien lobortis turpis, sed blandit arcu leo ut magna. Donec a erat lectus. Pellentesque at vestibulum elit. Donec accumsan ligula eget porta feugiat. Nulla a sem et ligula porta vehicula vitae sit amet est. Fusce sit amet fermentum nibh. Quisque viverra risus in mollis pellentesque.
+                </div>
+            </div>
+        </div>
+        {% block startPageBlock %}{% endblock %}
+        {% block login %}{% endblock %}
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-
         <p id="bottomText">Made by Romanyuk Sergey - 2015</p>
-
     </div>
 </nav>
 
