--- a/templates/StartPage.html
+++ b/templates/StartPage.html
@@ -3,41 +3,82 @@
 
 
 {% block startPageBlock %}
-    <h1>ABOUT</h1>
-    <div class="col-lg-4 mainCategories">*UPDATES*</div>
-    <div class="col-lg-2 mainCategories">
+    <div class="col-lg-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                *UPDATES*
+            </div>
+            <div class="panel-body">
 
-        <h4>{{ Hobbies.category_title }}</h4>
-        {% for cat in Hobbies_categories %}
-            <p>{{ cat.category_title }}</p>
-        {% endfor %}
-    </div>
-    <div class="col-lg-2 mainCategories">
-
-        <h4>{{ HiTech.category_title }}</h4>
-        {% for cat in HiTech_categories %}
-            <p>{{ cat.category_title }}</p>
-        {% endfor %}
-    </div>
-        <div class="col-lg-2 mainCategories">
-
-        <h4>{{ Talks.category_title }}</h4>
-        {% for cat in Talks_categories %}
-            <p>{{ cat.category_title }}</p>
-        {% endfor %}
-    </div>
-    <div class="col-lg-2 mainCategories">
-        <div class="row">
-            <h4>{{ BigBoss.category_title }}</h4>
-            {% for cat in BigBoss_categories %}
-                <p>{{ cat.category_title }}</p>
-            {% endfor %}
+            </div>
         </div>
-        <div class="row">
-            <h4>{{ HR.category_title }}</h4>
-            {% for cat in HR_categories %}
-                <p>{{ cat.category_title }}</p>
-            {% endfor %}
+    </div>
+    <div class="col-lg-2">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4>{{ Hobbies.category_title }}</h4>
+            </div>
+            <div class="panel-body">
+                {% for cat in Hobbies_categories %}
+                    <p>{{ cat.category_title }}</p>
+                {% endfor %}
+            </div>
         </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4>{{ HiTech.category_title }}</h4>
+            </div>
+            <div class="panel-body">
+                {% for cat in HiTech_categories %}
+                    <p>{{ cat.category_title }}</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4>{{ Talks.category_title }}</h4>
+            </div>
+            <div class="panel-body">
+                {% for cat in Talks_categories %}
+                    <p>{{ cat.category_title }}</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>{{ BigBoss.category_title }}</h4>
+                </div>
+                <div class="panel-body">
+                    {% if user.is_anonymous %}
+                        <p>Для просмотра нужна регистрация</p>
+                    {% else %}
+                        {% for cat in BigBoss_categories %}
+                            <p>{{ cat.category_title }}</p>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
+    </div>
+       <div class="col-lg-2">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>{{ HR.category_title }}</h4>
+                </div>
+                <div class="panel-body">
+                    {% if user.is_anonymous %}
+                        <p>Для просмотра нужна регистрация</p>
+                    {% else %}
+                        {% for cat in HR_categories %}
+                            <p>{{ cat.category_title }}</p>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
     </div>
 {% endblock %}
