--- a/templates/BoardPageContent.html
+++ b/templates/BoardPageContent.html
@@ -1,8 +1,9 @@
-{% extends 'BasePage.html' %}
+{% extends 'BoardPageHeader.html' %}
 {% load staticfiles %}
+{% load bootstrap3 %}
 
 
-{% block startPageBlock %}
+{% block board_content %}
     <div class="col-lg-4">
         <div class="panel panel-primary">
             <div class="panel-heading">
