--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -1,16 +1,14 @@
-{% extends 'BasePage.html' %}
+{% extends 'BoardPageHeader.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
 {% block login %}
-    <div class="row order">
-        <div class="col-lg-4 col-lg-offset-4 ">
-          <h3>Ну ты понял!!!</h3>
-            <form action="" method="post" id="loginForm">
-              {% csrf_token %}
-              {% bootstrap_form form %}
-              <input type="submit" class="btn btn-success" value="Захады ! ! !">
-            </form>
-        </div>
+    <div class="col-lg-4 col-lg-offset-4 ">
+        <h3>Ну ты понял!!!</h3>
+        <form action="" method="post" id="loginForm">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <input type="submit" class="btn btn-success" value="Захады ! ! !">
+        </form>
     </div>
 {% endblock %}
