--- a/templates/BoardPageContent.html
+++ b/templates/BoardPageContent.html
@@ -4,82 +4,28 @@
 
 
 {% block board_content %}
-    <div class="col-lg-4">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                *UPDATES*
-            </div>
-            <div class="panel-body">
+<div class="col-lg-4">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            *UPDATES*
+        </div>
+        <div class="panel-body">
 
-            </div>
         </div>
     </div>
-    <div class="col-lg-2">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h4>{{ Hobbies.category_title }}</h4>
-            </div>
-            <div class="panel-body">
-                {% for cat in Hobbies_categories %}
-                    <p>{{ cat.category_title }}</p>
-                {% endfor %}
-            </div>
+</div>
+{% for key, value in main_categories.items %}
+<div class="col-lg-2">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h4>{{ key }}</h4>
+        </div>
+        <div class="panel-body">
+            {% for sub_cat in value %}
+                <p><a href="#">{{ sub_cat.category_title }}</a></p>
+            {% endfor %}
         </div>
     </div>
-    <div class="col-lg-2">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h4>{{ HiTech.category_title }}</h4>
-            </div>
-            <div class="panel-body">
-                {% for cat in HiTech_categories %}
-                    <p>{{ cat.category_title }}</p>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-2">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h4>{{ Talks.category_title }}</h4>
-            </div>
-            <div class="panel-body">
-                {% for cat in Talks_categories %}
-                    <p>{{ cat.category_title }}</p>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-2">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h4>{{ BigBoss.category_title }}</h4>
-                </div>
-                <div class="panel-body">
-                    {% if user.is_anonymous %}
-                        <p>Для просмотра нужна регистрация</p>
-                    {% else %}
-                        {% for cat in BigBoss_categories %}
-                            <p>{{ cat.category_title }}</p>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            </div>
-    </div>
-       <div class="col-lg-2">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h4>{{ HR.category_title }}</h4>
-                </div>
-                <div class="panel-body">
-                    {% if user.is_anonymous %}
-                        <p>Для просмотра нужна регистрация</p>
-                    {% else %}
-                        {% for cat in HR_categories %}
-                            <p>{{ cat.category_title }}</p>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            </div>
-    </div>
+</div>
+{% endfor %}
 {% endblock %}
