--- a/templates/ThreadsPageContent.html
+++ b/templates/ThreadsPageContent.html
@@ -4,18 +4,44 @@
 
 
 {% block thread_content %}
-    <div class="col-lg-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading" id="threads_content_panel_header">
-                <h4>Python</h4>
-            </div>
-            <div class="panel-body">
-                <form action="" method="post" id="loginForm">
-                    {% csrf_token %}
-                    {% bootstrap_form form %}
-                    <input type="submit" class="btn btn-success" value="Захады ! ! !">
-                </form>
+<h2 id="thread_category_header">Thread category name</h2>
+<div class="col-lg-8 col-lg-offset-2">
+    <div class="panel panel-primary">
+        <div class="panel-heading" id="new_thread_panel_header">
+            <h4>New thread</h4>
+        </div>
+        <div class="panel-body">
+            <form action='/new_thread/' method="post">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-success" value="Create new thread">
+            </form>
+        </div>
+    </div>
+</div>
+<div class="col-lg-12">
+    <div class="panel panel-primary">
+        <div class="panel-heading clearfix">
+            <div class="col-lg-6" id="thread_title"><h4>#ID |Thread title</h4></div>
+            <div class="col-lg-3" id="thread_date"><p>Created date</p></div>
+            <div class="col-lg-3" id="thread_reply"><a class="btn btn-success" href="#">Reply</a></div>
+        </div>
+        <div class="panel-body">
+            <div class="media">
+                <div class="media-left">
+                    <img class="media-object logo_image" src="{% static 'Logo.jpg' %}" alt="Logo.jpg">
+                </div>
+                <div class="media-body">
+                    <h5></h5>
+                    <p>dfagvdhgbvtbyhyfubfbut</p>
+                    <p>dfagvdhgbvtbyhyfubfbut</p>
+                    <p>dfagvdhgbvtbyhyfubfbut</p>
+                    <p>dfagvdhgbvtbyhyfubfbut</p>
+                    <p>replies: <a href="#">#124</a>, <a href="#">#124</a></p>
+                </div>
             </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
