--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,8 @@ ul.csv li:last-child:after { content: ""; }
 
 #thread_category_header{
     text-align: center;
+    background-color:#9AD2FA
+
 }
 
 #thread_title{
