Form save don't work, replies added

--- a/templates/ThreadsPageContent.html
+++ b/templates/ThreadsPageContent.html
@@ -38,16 +38,7 @@
                              alt="Logo.jpg">
                     </div>
                     <div class="media-body">
-                        <h5></h5>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
+                        <p>{{ thread.thread_text }}</p>
                         <p>replies: <a href="#">#124</a>, <a href="#">#124</a></p>
                     </div>
                 </div>
