--- a/templates/ThreadPageContent.html
+++ b/templates/ThreadPageContent.html
@@ -23,29 +23,38 @@
     <div class="col-lg-12">
         <div class="panel panel-primary">
             <div class="panel-heading clearfix">
-                <div class="col-lg-6" id="thread_title"><h4>#ID |Thread title</h4></div>
-                <div class="col-lg-3" id="thread_date"><p>Created date</p></div>
-                <div class="col-lg-3" id="thread_reply"><a class="btn btn-success" href="#">Reply</a></div>
+                <div class="col-lg-6" id="thread_title"><h4>#{{ thread.id }}
+                    | {{ thread.thread_title }}</h4></div>
+                <div class="col-lg-3" id="thread_date">
+                    <p>Created : {{ thread.thread_date }}</p>
+                </div>
             </div>
             <div class="panel-body">
                 <div class="media">
                     <div class="media-left">
-                        <img class="media-object logo_image" src="{% static 'Logo.jpg' %}" alt="Logo.jpg">
+                        <img class="media-object logo_image" src="http://127.0.0.1:8000/{{thread.thread_image}}"
+                             alt="Logo.jpg">
                     </div>
                     <div class="media-body">
-                        <h5></h5>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
-
-                        <p>dfagvdhgbvtbyhyfubfbut</p>
+                        <p>{{ thread.thread_text }}</p>
 
                         <p>replies: <a href="#">#124</a>, <a href="#">#124</a></p>
                     </div>
                 </div>
+                {% for reply in replies %}
+                <div class="well reply">
+                    <div class="row">
+                        <div class="col-lg-11">
+                            <p>#{{ reply.id }} Created : {{ reply.reply_date }}</p>
+                            <p>>>  {{ thread.thread_title }}</p>
+                        </div>
+                        <div class="col-lg-1">
+                            <a class="btn btn-success" href="#">Reply</a>
+                        </div>
+                    </div>
+                    {{ reply.reply_text }}
+                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
