--- a/templates/ThreadPageContent.html
+++ b/templates/ThreadPageContent.html
@@ -23,10 +23,13 @@
     <div class="col-lg-12">
         <div class="panel panel-primary">
             <div class="panel-heading clearfix">
-                <div class="col-lg-6" id="thread_title"><h4>#{{ thread.id }}
+                <div class="col-lg-8" id="thread_title"><h4>#{{ thread.id }}
                     | {{ thread.thread_title }}</h4></div>
                 <div class="col-lg-3" id="thread_date">
                     <p>Created : {{ thread.thread_date }}</p>
+                </div>
+                <div class="col-lg-1">
+                    <a class="btn btn-success" href="#">Reply</a>
                 </div>
             </div>
             <div class="panel-body">
@@ -37,8 +40,10 @@
                     </div>
                     <div class="media-body">
                         <p>{{ thread.thread_text }}</p>
-
-                        <p>replies: <a href="#">#124</a>, <a href="#">#124</a></p>
+                        <p>replies:
+                            {% for reply in replies %}
+                                <a href="#">#{{ reply.id }}, </a>
+                            {% endfor %}
                     </div>
                 </div>
                 {% for reply in replies %}
@@ -46,7 +51,8 @@
                     <div class="row">
                         <div class="col-lg-11">
                             <p>#{{ reply.id }} Created : {{ reply.reply_date }}</p>
-                            <p>>>  {{ thread.thread_title }}</p>
+
+                            <p>>> {{ thread.thread_title }}</p>
                         </div>
                         <div class="col-lg-1">
                             <a class="btn btn-success" href="#">Reply</a>
