--- a/templates/ThreadsPageHeader.html
+++ b/templates/ThreadsPageHeader.html
@@ -30,7 +30,7 @@
                         </dl>
                     </div>
                     <div class="media-right">
-                        <img class="media-object logo_image" src="{% static 'Logo.jpg' %}" alt="Logo.jpg">
+                        <img class="media-object logo_image" src="{% static 'Logo.jpg' %}" alt="{% static 'ImageNot.jpg' %}">
                     </div>
                 </div>
             </div>
