--- a/templates/ThreadPageContent.html
+++ b/templates/ThreadPageContent.html
@@ -7,18 +7,20 @@
 <div class="col-lg-12">
     <div class="well well-sm" id="thread_category_header"><h2>{{ thread.thread_title }}</h2></div>
     <div class="col-lg-8 col-lg-offset-2">
+        {% if form %}
         <div class="panel panel-primary">
             <div class="panel-heading" id="new_thread_panel_header">
                 <h4>New reply</h4>
             </div>
             <div class="panel-body">
-                <form action='/new_thread/' method="post">
+                <form action='/new_reply/' method="post">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     <input type="submit" class="btn btn-success" value="Create new reply">
                 </form>
             </div>
         </div>
+        {% endif %}
     </div>
     <div class="col-lg-12">
         <div class="panel panel-primary">
@@ -29,7 +31,7 @@
                     <p>Created : {{ thread.thread_date }}</p>
                 </div>
                 <div class="col-lg-1">
-                    <a class="btn btn-success" href="#">Reply</a>
+                    <a class="btn btn-success" href="{% url 'thread_page' thread.id 0 1 %}">Reply</a>
                 </div>
             </div>
             <div class="panel-body">
@@ -40,9 +42,10 @@
                     </div>
                     <div class="media-body">
                         <p>{{ thread.thread_text }}</p>
+
                         <p>replies:
                             {% for reply in replies %}
-                                <a href="#">#{{ reply.id }}, </a>
+                            <a href="#">#{{ reply.id }}, </a>
                             {% endfor %}
                     </div>
                 </div>
