files are not uploaded

--- a/templates/ThreadPageContent.html
+++ b/templates/ThreadPageContent.html
@@ -37,7 +37,7 @@
                 <div class="panel-body">
                     <div class="media">
                         <div class="media-left">
-                            <img class="media-object logo_image" src="http://{{ request.get_host }}/{{ thread.thread_image }}"
+                            <img class="media-object logo_image" src="http://{{ request.get_host }}/{{ thread.thread_image.url }}"
                                  alt="Logo.jpg">
                         </div>
                         <div class="media-body">
