--- a/templates/Dashboard_page_content.html
+++ b/templates/Dashboard_page_content.html
@@ -1,9 +1,9 @@
-{% extends 'BoardPageHeader.html' %}
+{% extends 'Dashboard_page_header.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
 
-{% block board_content %}
+{% block dashboard_page_content %}
 <div class="col-lg-4">
     <div class="panel panel-primary">
         <div class="panel-heading">
