--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -1,8 +1,8 @@
-{% extends 'BoardPageHeader.html' %}
+{% extends 'Dashboard_page_header.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block login %}
+{% block login_page %}
     <div class="col-lg-4 col-lg-offset-4 ">
         <h3>Ну ты понял!!!</h3>
         <form action="" method="post" id="loginForm">
