--- a/templates/BasePage.html
+++ b/templates/BasePage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Forums</title>
-    <link href="{% static 'favicon.ico' %}" rel="icon" type="image/x-icon">
+    <link href="{% static 'site_images/favicon.ico' %}" rel="icon" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -23,16 +23,10 @@
 <body>
     <div class="container" id="main">
         <div class="row">
-            {% block board_page_header %}{% endblock %}
+            {% block dashboard_page_header %}{% endblock %}
             {% block threads_page_header %}{% endblock %}
         </div>
     </div>
-    <div class="bottom_buffer"></div>
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container">
-            <p id="bottomText">Made by Romanyuk Sergey - 2015</p>
-        </div>
-    </nav>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
