--- a/templates/One_thread_content.html
+++ b/templates/One_thread_content.html
@@ -1,9 +1,9 @@
-{% extends 'ThreadsPageHeader.html' %}
+{% extends 'Threads_page_header.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
 
-{% block thread_content %}
+{% block one_thread_page_content %}
     <div class="col-lg-12">
         <div class="well well-sm" id="thread_category_header"><h2>{{ thread.thread_title }}</h2></div>
         <div class="col-lg-8 col-lg-offset-2">
