--- a/templates/Threads_page_content.html
+++ b/templates/Threads_page_content.html
@@ -1,9 +1,9 @@
-{% extends 'ThreadsPageHeader.html' %}
+{% extends 'Threads_page_header.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
 
-{% block threads_content %}
+{% block threads_page_content %}
     <div class="col-lg-12">
         <div class="well well-sm" id="thread_category_header"><h2>{{ request.session.category_title }}</h2></div>
         <div class="col-lg-8 col-lg-offset-2">
